<resources>
    <string name="app_name">INE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Alta</string>
    <string name="menu_slideshow">Consulta</string>
    <string name="menu_tools">Modificar</string>
    <string name="menu_share">Eliminar</string>
    <string name="menu_send">Listar</string>
    <string name="menu_creditos">Créditos</string>
    <string name="menu_salir">Salir</string>

    <string name="campoFirebase1">curp</string>
    <string name="campoFirebase2">nombre</string>
    <string name="campoFirebase3">distrito</string>

    <string name="VentanaEmergente1">Desarrollador:</string>
    <string name="VentanaEmergente2">Luis Arturo Díaz Hinojosa</string>
    <string name="VentanaEmergente3">Materia:</string>
    <string name="VentanaEmergente4">Programación Aplicada a Sistemas de Cómputo Móvil</string>
    <string name="VentanaEmergente5">Profesor:</string>
    <string name="VentanaEmergente6">M. en C. Rocío Elizabeth Pulido Alba</string>
</resources>
