<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Principal">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_inicio_black"
                android:title="@string/menu_home" />
        </menu>
    </item>

    <item android:title="CRUD en Firebase">
        <menu>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_alta_vertical_align_top_black"
                android:title="@string/menu_gallery" />
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_consulta_vertical_align_bottom_black"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_modificar_vertical_align_center_black"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_eliminar_do_not_disturb_on_black"
                android:title="@string/menu_share" />
        </menu>
    </item>


    <item android:title="Vistas">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_listar_format_line_spacing_black"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_creditos"
                android:icon="@drawable/ic_menu_creditos_priority_high_black"
                android:title="@string/menu_creditos" />
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_salir_forward_black"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
